# mixdeck

./: .gitignore  .gitmodules  CLAUDE.md
apps/electron-ui/: electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
apps/electron-ui/src/main/: engineEvents.ts  index.ts  library.ts
apps/electron-ui/src/preload/: index.d.ts  index.ts
apps/electron-ui/src/renderer/: index.html
apps/electron-ui/src/renderer/src/: App.tsx
apps/electron-ui/src/renderer/src/bridge/: index.ts
apps/electron-ui/src/renderer/src/components/: ConsoleMaster.tsx  Crossfader.tsx  Deck.tsx  FilterKnob.tsx  LibraryPanel.tsx  PluginChainPanel.tsx  TitleBar.tsx  index.ts
apps/electron-ui/src/renderer/src/controllers/: DeckController.ts  LibraryController.ts  MasterBusController.ts  MixerController.ts  PluginController.ts  index.ts
apps/electron-ui/src/renderer/src/state/: index.ts  useDeckState.ts
apps/electron-ui/src/shared/: events.ts
design/export-html/: MixDeck-1b-standalone.html  deck_component.html
docs/: MixDeck_Architecture.docx  architecture.md  decision.md  progress.md  roadmap.md  sbom.json
native/engine/: CMakeLists.txt  package-lock.json  package.json  test-bridge.js
native/engine/plugin-worker/: PluginWorkerMain.cpp
native/engine/src/: BpmAnalyzer.cpp  BpmAnalyzer.h  Deck.cpp  Deck.h  Engine.cpp  Engine.h  FilterDSP.cpp  FilterDSP.h  IsolatedPluginHost.cpp  IsolatedPluginHost.h  MasterBus.cpp  MasterBus.h  Mixer.cpp  Mixer.h  NodeBinding.cpp  PluginChain.cpp  PluginChain.h  PluginHost.cpp  PluginHost.h  PluginWindowSpike.cpp  PluginWindowSpike.h  PluginWorkerProtocol.cpp  PluginWorkerProtocol.h  TimeStretch.cpp  TimeStretch.h
native/engine/standalone-app/: DeckPanel.cpp  DeckPanel.h  Main.cpp  MainComponent.cpp  MainComponent.h
